nginx-deploy.yml
# This is a deployment for spinning my application with Nginx

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginxdeploy
  namespace: demo
  labels:
    app: nginx_deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:  
        app: nginx
    spec:
      containers:
       - name: nginx-cont
         image: shudhoo/nginx-app:v1
         ports:
          - containerPort: 80
